--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <!-- <p>&copy; {{ site.username }}</p> -->
-    <p>Portfoilo <span class="love">❤</span> by <a href="https://github.com/mephrine">Mephrine</a></p>
+    <p> <!-- <span class="love">❤</span> --> <a href="https://github.com/mephrine">Mephrine Blog</a></p>
 </footer>
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="{{ '/assets/js/sweet-scroll.min.js' | prepend: site.baseurl }}"></script>
